--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,11 +20,16 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
+    - name: Install dotnet-packaging
+      run: dotnet tool install --global dotnet-zip
     - name: Restore dependencies
-      run: cd src/Supercell.Laser.Server
-    - name: Restore dependencies
-      run: dotnet restore
+      run: cd src/Supercell.Laser.Server && dotnet restore Supercell.Laser.Server.csproj
     - name: Build
-      run: dotnet build Supercell.Laser.Server.csproj --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: cd src/Supercell.Laser.Server && dotnet build Supercell.Laser.Server.csproj --no-restore
+    - name: packages
+      run: cd src/Supercell.Laser.Server && dotnet zip install && dotnet zip
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Server
+        path: src/Supercell.Laser.Server/bin/Debug/net6.0/Supercell.Laser.Server.1.0.0.zip
